# rag-ppl-pdf

./: .gitignore  INGESTA_COMPLETADA.md  QUICKSTART.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/data/pdf/: README.txt
backend/data/wiki/: CMF.md  ad_4nxdm_ikluylq2rma5rwl6yhxjs2drcugcemydyzg87c9elojlzusfczi6elogfjijf7vjtdjhjhkng4kgo3npk94qlwnh29z6gp7un69kgkrl5pobfopn3wnkwyjdr7rwo39gtxo2aear6pvrkvy2ll8kktl  core.md  ej-emitircarta.ppl  eliminar_imagenes.py  home.md  presentacion_fpa.ppt  sgc_-_sep_20.pptx  sp-simulator.js  template-carta.dotx
backend/data/wiki/CMF/: Cierre-y-apertura-ctas-remuneradas.md  Cuentas-remuneradas.md  Gral-op.md  Integración.md  Perfiles.md  PnL.md  Renovación-masiva-MMCREM.md  Vuelco.md  administracion-de-tasas.md  cierre-del-dia.md  interfaz.md
backend/data/wiki/ac32/: AC32-Entregas.md  consola.md  faq.md  inicio.md  setup.md  test.md
backend/data/wiki/appserver/: App-Server---Instalación-servicio-Windows.md  App-Server.md
backend/data/wiki/bofa/: inicio.md
backend/data/wiki/capsa/: custom.md  inicio.md
backend/data/wiki/cargill/: inicio.md  integrity.md  pedidos-integrity.md  seguridad.md
backend/data/wiki/clientes/: bfsa.md  inicio.md
backend/data/wiki/core/: Build-Server.md  Cache.md  Campos-disponibles.md  Canales.md  Circuito-de-requerimientos.md  Como-configurar-los-exes-para-que-las-actualizaciones-no-pisen-los-scripts-ppl.md  EsquemadeTrabajo.md  (+72 more)
backend/src/: api.py
backend/src/rag/: __init__.py  auto_ingest.py  embeddings.py  ingest.py  llm.py  prompts.py  query.py  store.py
(+274 files in other folders)
